<resources>
    <string name="app_name">SportMove</string>
    <string name="text_sport_matches">Доступные спортивные матчи</string>
    <string name="text_matches">Матчи</string>
    <string name="text_create_new_match">Создание нового матча</string>
    <string name="text_create">Создать</string>
    <string name="text_sign_in">Авторизация</string>
    <string name="text_published_matches">Опубликованные спортивные\nматчи</string>
    <string name="text_open_requests">Посмотреть поданные заявки</string>
    <string name="competition_list">На данный матчи отсустствуют</string>
    <string name="competition_date">Дата проведения: %s</string>

    <string name="captain">Капитан команды: %s</string>

    <string name="accept">Подтвердить</string>
    <string name="reject">Отклонить</string>
    <string name="status_accept">Заявка принята</string>
    <string name="status_reject">Заявка оклонена</string>
    <string name="status_in_progress">В рассмотрении</string>
    <string name="status_unknown">Неизвестно</string>
    <string name="put_request">Подать заявку</string>
    <string name="watch_requests">Посмотреть заявки</string>
    <string name="list_requests_empty">Список заявок пока пуст</string>
    <string name="start_match">Начать матч</string>
    <string name="end_game">Завершить игру</string>
    <string name="game_not_start">Игра еще не началась</string>
</resources>